CREATE TABLE IF NOT EXISTS Usuarios(
  user_id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  username VARCHAR(100) NOT NULL UNIQUE,
  password VARCHAR(255) NOT NULL,
  email VARCHAR(70) NOT NULL,
  nombre VARCHAR(50) NOT NULL,
  apellido VARCHAR(50) NOT NULL,
  telefono VARCHAR(15) NOT NULL,
  direccion VARCHAR(100),
  fecha_registro TIMESTAMP WITH TIME ZONE DEFAULT NOW(),
  identificacion VARCHAR(15) NOT NULL,
  tipoID VARCHAR(20) NOT NULL,
  fecha_nacimiento DATE
);

CREATE TABLE IF NOT EXISTS Empleados(
	empleado_id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
	cv VARCHAR(255),
	habilidades TEXT[],
	idiomas TEXT[],
	experiencia_laboral INT NOT NULL,
	referencias_personales INT NOT NULL,
	logros_educativos INT NOT NULL,
	user_id INT NOT NULL,
	CONSTRAINT fk_user_id
		FOREIGN KEY (user_id) REFERENCES Usuarios(user_id)
		ON DELETE CASCADE
		ON UPDATE NO ACTION
);

CREATE TABLE IF NOT EXISTS Educacion(
	id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
	institucion VARCHAR(255) NOT NULL,
	tipo_instituto VARCHAR(100) NOT NULL,
	titulo VARCHAR(100) NOT NULL,
	inicio DATE NOT NULL,
	termino DATE,
	cursando_actualmente BOOLEAN NOT NULL,
	pais VARCHAR(100) NOT NULL,
	departamento VARCHAR(100)NOT NULL,
	ciudad VARCHAR(100)NOT NULL,
	empleado_id INT NOT NULL,
	CONSTRAINT fk_empleado_id
		FOREIGN KEY (empleado_id) REFERENCES Empleados(empleado_id)
		ON DELETE CASCADE
		ON UPDATE NO ACTION
);

CREATE TABLE IF NOT EXISTS ExpLaboral(
	id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
	nombre_empresa VARCHAR(150) NOT NULL,
	pais VARCHAR(150) NOT NULL,
	modalidad VARCHAR(150) NOT NULL,
	cargo VARCHAR(30) NOT NULL,
	inicio DATE NOT NULL,
	termino DATE,
	trabaja_actualmente BOOLEAN NOT NULL,
	jefe VARCHAR(50) NOT NULL,
	jefe_telefono VARCHAR(15) NOT NULL,
	funcion VARCHAR(650),
	detalles VARCHAR(255),
	empleado_id INT NOT NULL,
	CONSTRAINT fk_empleado_id
		FOREIGN KEY (empleado_id) REFERENCES Empleados(empleado_id)
		ON DELETE CASCADE
		ON UPDATE NO ACTION
);

CREATE TABLE IF NOT EXISTS RefPersonal(
	id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
	nombre VARCHAR(50) NOT NULL,
	telefono VARCHAR(15) NOT NULL,
	parentezco VARCHAR(25) NOT NULL,
	empleado_id INT NOT NULL,
	CONSTRAINT fk_empleado_id
		FOREIGN KEY (empleado_id) REFERENCES Empleados(empleado_id)
		ON DELETE CASCADE
		ON UPDATE NO ACTION
);

CREATE TABLE IF NOT EXISTS Empresas(
	empresa_id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
	nombre VARCHAR(255) NOT NULL,
	descripcion VARCHAR(255),
	logo VARCHAR(255)NOT NULL,
	telefono VARCHAR(15) NOT NULL,
	direccion VARCHAR(100) NOT NULL,
	email VARCHAR(100) NOT NULL,
	web VARCHAR(70) NOT NULL,
	tipo_empresa VARCHAR(25)NOT NULL,
	nit VARCHAR(15) NOT NULL,
	representante VARCHAR(70) NOT NULL,
	representante_identificacion VARCHAR(15) NOT NULL,
	representante_tipo_identificacion VARCHAR(25) NOT NULL
);



CREATE TABLE IF NOT EXISTS Empleadores(
	empleador_id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
	empresa_id INT NOT NULL,
	usuario_id INT NOT NULL,
	CONSTRAINT fk_empresa_empleador
		FOREIGN KEY (empresa_id) REFERENCES Empresas(empresa_id)
		ON DELETE CASCADE
		ON UPDATE NO ACTION,
	CONSTRAINT fk_usuario_empleador
		FOREIGN KEY (usuario_id) REFERENCES Usuarios(user_id)
		ON DELETE CASCADE
		ON UPDATE NO ACTION
);

CREATE TABLE IF NOT EXISTS OfertaTrabajo(
	id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
	id_empleador INT NOT NULL,
	id_empresa INT NOT NULL,
	cargo VARCHAR(50) NOT NULL,
	ubicacion VARCHAR(50) NOT NULL,
	descripcion VARCHAR (255) NOT NULL,
	requisitos VARCHAR (3560) NOT NULL,
	salario NUMERIC(11,2) NOT NULL,
	fecha_publicacion TIMESTAMP WITH TIME ZONE DEFAULT NOW(),
	fechaExpiracion DATE NOT NULL,
	tipo_contrato VARCHAR(25) NOT NULL,
	modalidad VARCHAR(25) NOT NULL,
	CONSTRAINT fk_oferta_empleador
		FOREIGN KEY (id_empleador) REFERENCES Empleados(empleado_id)
		ON DELETE CASCADE
		ON UPDATE NO ACTION,
	CONSTRAINT fk_oferta_empresa
		FOREIGN KEY (id_empresa) REFERENCES Empresas(empresa_id)
		ON DELETE CASCADE
		ON UPDATE NO ACTION
);

SELECT * FROM Empleados;

DROP TABLE Empleadores;

